--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <ul>
                 <li class="nav-item"><a href="index.html">Home</a> </li>
                 <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="menu.html">Menu</a></li>
+                <li class="nav-item"><a href="location.html">Location</a></li>
+                <li class="nav-item"><a href="about.html">Contact Us</a></li>
             </ul>
 
         </nav>
@@ -26,78 +26,37 @@
 
     <main class="site-main">
         <section class="welcome">
-            <h1> Welcome to the event center </h1>
-            <p> Your one-step description for all events and gatherings</p>
+            <h1> Fifa Club World Cup is coming to Seattle </h1>
+            <p> You will find some of Europe's best teams in Seattle this summer. Here are three of my favorite matches.</p>
         </section>
 
-        <!--Events grid aproach-->
-
-        <section class="events">
-            <h2>Upcoming events (grid Approach) </h2>
-
-            <div class="event-grid">
-                <article class="event">
-                    <img
-                        src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
-                </article>
-
-                <article class="event">
-                    <img src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244"
-                        alt="Real Madrid players">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
-                </article>
-
-                <article class="event">
-                    <img src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244"
-                        alt="Real Madrid players">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
-                </article>
-
-                <article class="event">
-                    <img src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244"
-                        alt="Real Madrid players">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
-                </article>
-            </div>
-        </section>
 
         <!--Events Flexbox approach-->
         <section class="events">
-            <h2>Upcoming events (flexbox approach)</h2>
+            <h2>Exciting Matches at Lumen Field</h2>
             <div class="events-flexbox">
 
                 <article class="event">
                     <img
-                        src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
+                        src="https://image.discovery.indazn.com/ca/v2/ca/image?id=9my71qof4tvvjjyon5jvdyth0_image-header_pUs_1740401481000&quality=50" alt="Seattle Sounders vs Atletico Madrid">
+                    <h3>Seattle Sounders vs Atletico Madrid</h3>
+                    <p>June 19th at 3:00 PM</p>
                 </article>
 
                 <article class="event">
-                    <img src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244"
-                        alt="Real Madrid players">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
+                    <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=7za2rp5rzi26zuc0uupmtpojn_image-header_pUs_1748594817000&quality=70"
+                        alt="Seattle Sounders vs PSG">
+                    <h3>Seattle Sounders vs PSG</h3>
+                    <p>June 23rd at 12:00 PM</p>
                 </article>
 
                 <article class="event">
-                    <img src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244"
-                        alt="Real Madrid players">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
+                    <img src="https://prosoccerwire.usatoday.com/gcdn/authoring/images/DataSkriveProSoccerWire/2025/06/09/SMLS/84122809007-4a390aZ.jpeg?width=660&height=372&fit=crop&format=pjpg&auto=webp"
+                        alt="Inter Milan vs River Plate">
+                    <h3>Inter Milan vs River Plate</h3>
+                    <p>June 25th at 6:00 PM</p>
                 </article>
 
-                <article class="event">
-                    <img src="https://images.daznservices.com/di/library/DAZN_News/83/34/2025-01-22-real-madrid_1re88833ftql51mno4dya04zw3.jpg?t=-1752719244"
-                        alt="Real Madrid players">
-                    <h3>Real Madrid vs Al-Ahly</h3>
-                    <p>This is a club world cup game in the USA</p>
-                </article>
             </div>
         </section>
 
