--- a/location.html
+++ b/location.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event center - Location</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
@@ -13,9 +15,9 @@
             <ul>
                 <li class="nav-item"><a href="index.html">Home</a> </li>
                 <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="menu.html">Menu</a></li>
+                <li class="nav-item"><a href="location.html">Location</a></li>
+                <li class="nav-item"><a href="about.html">Contact Us</a></li>
             </ul>
 
         </nav>
@@ -23,16 +25,25 @@
     </header>
 
     <main>
-        main
+
+        <h1 location-header>Here's a map of Lumen field</h1>
+        <p>You can find cool places near Lumen field like the WAMU Theater</p>
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2690.5933187289247!2d-122.3342143236076!3d47.59515177118878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906aa3b9f1182b%3A0xa636cd513bba22dc!2sLumen%20Field!5e0!3m2!1sen!2sus!4v1749702663917!5m2!1sen!2sus"
+            width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
     </main>
 
-    <footer>
-        
-        <p> 2025 Samir Developer.  All rights reserved</p>
+    <footer class="site-footer">
+
+        <p> 2025 Samir Developer. All rights reserved</p>
 
     </footer>
 
-    
+
 </body>
+
 </html>
