--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event center - Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
@@ -13,9 +15,9 @@
             <ul>
                 <li class="nav-item"><a href="index.html">Home</a> </li>
                 <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="menu.html">Menu</a></li>
+                <li class="nav-item"><a href="location.html">Location</a></li>
+                <li class="nav-item"><a href="about.html">Contact Us</a></li>
             </ul>
 
         </nav>
@@ -23,20 +25,16 @@
     </header>
 
     <main class="site-main">
-        <section class="welcome">
-            <h1> Welcome to the event center </h1>
-            <p> Your one-step description for all events and gatherings</p>
-
-        </section>
 
     </main>
 
-    <footer>
-        
-        <p> 2025 Samir Developer.  All rights reserved</p>
+    <footer class="site-footer">
+
+        <p> 2025 Samir Developer. All rights reserved</p>
 
     </footer>
 
-    
+
 </body>
+
 </html>
