--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
             <ul>
                 <li class="nav-item"><a href="index.html">Home</a> </li>
                 <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="menu.html">Menu</a></li>
+                <li class="nav-item"><a href="location.html">Location</a></li>
+                <li class="nav-item"><a href="about.html">Contact Us</a></li>
             </ul>
 
         </nav>
@@ -27,9 +27,9 @@
 
     </main>
 
-    <footer>
-        
-        <p> 2025 Samir Developer.  All rights reserved</p>
+    <footer class="site-footer">
+
+        <p> 2025 Samir Developer. All rights reserved</p>
 
     </footer>
 
