--- a/events.html
+++ b/events.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event center - Events</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
@@ -13,9 +15,9 @@
             <ul>
                 <li class="nav-item"><a href="index.html">Home</a> </li>
                 <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
                 <li class="nav-item"><a href="menu.html">Menu</a></li>
+                <li class="nav-item"><a href="location.html">Location</a></li>
+                <li class="nav-item"><a href="about.html">Contact Us</a></li>
             </ul>
 
         </nav>
@@ -23,16 +25,43 @@
     </header>
 
     <main>
-        main
+        <section class="events-page">
+            <h2>Exciting Matches at Lumen Field</h2>
+            <div class="events-">
+
+                <article class="event-page">
+                    <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=9my71qof4tvvjjyon5jvdyth0_image-header_pUs_1740401481000&quality=50"
+                        alt="Seattle Sounders vs Atletico Madrid">
+                    <h3>Seattle Sounders vs Atletico Madrid</h3>
+                    <p>June 19th at 3:00 PM</p>
+                </article>
+
+                <article class="event-page">
+                    <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=7za2rp5rzi26zuc0uupmtpojn_image-header_pUs_1748594817000&quality=70"
+                        alt="Seattle Sounders vs PSG">
+                    <h3>Seattle Sounders vs PSG</h3>
+                    <p>June 23rd at 12:00 PM</p>
+                </article>
+
+                <article class="event-page">
+                    <img src="https://prosoccerwire.usatoday.com/gcdn/authoring/images/DataSkriveProSoccerWire/2025/06/09/SMLS/84122809007-4a390aZ.jpeg?width=660&height=372&fit=crop&format=pjpg&auto=webp"
+                        alt="Inter Milan vs River Plate">
+                    <h3>Inter Milan vs River Plate</h3>
+                    <p>June 25th at 6:00 PM</p>
+                </article>
+
+            </div>
+        </section>
 
     </main>
 
-    <footer>
-        
-        <p> 2025 Samir Developer.  All rights reserved</p>
+    <footer class="site-footer">
+
+        <p> 2025 Samir Developer. All rights reserved</p>
 
     </footer>
 
-    
+
 </body>
+
 </html>
