--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="nav-item"><a href="events.html">Events</a></li>
                 <li class="nav-item"><a href="menu.html">Menu</a></li>
                 <li class="nav-item"><a href="location.html">Location</a></li>
-                <li class="nav-item"><a href="about.html">Contact Us</a></li>
+                <li class="nav-item"><a href="contact.html">Contact Us</a></li>
             </ul>
 
         </nav>
