added check boxes to contact form

--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,17 @@
                                 <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
                             </div>
 
+                            <div>
+                                <p class="contact-form-paragraph">How did you hear about us?</p>
+                                <form>
+                                    <label>Google<input type="checkbox" name="Google" value="Google"></label>
+                                    <label>Samir Developer<input type="checkbox" name="Samir Developer" value="Samir Developer"></label>
+                                    <label>Coding Temple<input type="checkbox" name="Coding Temple" value="Coding Temple"></label>
+                                </form> 
+                            </div> <br>
 
-                            <label for="message">Anything you want us to know?</label><br><br>
+
+                            <label class="contact-form-message" for="message">Anything you want us to know?</label><br><br>
                             <textarea id="message" name="message" rows="8"></textarea><br><br>
                             <button type="submit">Send Message</button><br>
 
