Added Menu items

--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,45 @@
     </header>
 
     <main class="site-main">
+        <h1 class="menu-table-header">Smash Burger Popular items</h1>
+        <p class="menu-table-paragraph">Lumen field has a lot of parterners when it comes to food and drinks but here's one option that I think you might like</p>
+        <table class="menu-table">
+  <thead>
+    <tr>
+      <th>Item Name</th>
+      <th>Category</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Apple</td>
+      <td>Fruit</td>
+      <td>$1.00</td>
+    </tr>
+    <tr>
+      <td>Milk</td>
+      <td>Dairy</td>
+      <td>$2.50</td>
+    </tr>
+    <tr>
+      <td>Bread</td>
+      <td>Bakery</td>
+      <td>$1.75</td>
+    </tr>
+    <tr>
+      <td>Eggs</td>
+      <td>Dairy</td>
+      <td>$3.00</td>
+    </tr>
+    <tr>
+      <td>Carrots</td>
+      <td>Vegetable</td>
+      <td>$0.80</td>
+    </tr>
+  </tbody>
+</table>
+
 
     </main>
 
