Added location sidebar, stadium info and some styling.

--- a/menu.html
+++ b/menu.html
@@ -30,36 +30,36 @@
         <table class="menu-table">
   <thead>
     <tr>
-      <th>Item Name</th>
-      <th>Category</th>
-      <th>Price</th>
+      <th>Food</th>
+      <th>Type</th>
+      <th>Total Price</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>Apple</td>
-      <td>Fruit</td>
-      <td>$1.00</td>
+      <td>Steak Bowl</td>
+      <td>Meat</td>
+      <td>$32.00</td>
     </tr>
     <tr>
-      <td>Milk</td>
-      <td>Dairy</td>
-      <td>$2.50</td>
+      <td>Crispy Veggie Bowl</td>
+      <td>Veggie lovers</td>
+      <td>$24.00</td>
     </tr>
     <tr>
-      <td>Bread</td>
-      <td>Bakery</td>
-      <td>$1.75</td>
+      <td>BBQ Pizza</td>
+      <td>Pizza</td>
+      <td>$25.00</td>
     </tr>
     <tr>
-      <td>Eggs</td>
-      <td>Dairy</td>
-      <td>$3.00</td>
+      <td>Smash Burger</td>
+      <td>Burgers</td>
+      <td>$24.00</td>
     </tr>
     <tr>
-      <td>Carrots</td>
-      <td>Vegetable</td>
-      <td>$0.80</td>
+      <td>Cheeseburger & Fries</td>
+      <td>Kids Menu</td>
+      <td>$13.</td>
     </tr>
   </tbody>
 </table>
@@ -69,7 +69,7 @@
 
     <footer class="site-footer">
 
-        <p> 2025 Samir Developer. All rights reserved</p>
+        <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
 
     </footer>
 
