--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
 
     <footer class="site-footer">
 
-        <p> 2025 Samir Developer. All rights reserved</p>
+        <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
 
     </footer>
 
