Updated home page and also fixed some styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!--Events Flexbox approach-->
         <section class="events">
-            <h2>Exciting Matches at Lumen Field</h2>
+            <h2 class="events-header">Exciting Matches at Lumen Field</h2>
             <div class="events-flexbox">
 
                 <article class="event">
@@ -59,6 +59,18 @@
 
             </div>
         </section>
+
+        <article class="lumen-field-history">
+            <h1>About The Club World Cup</h1>
+            
+            <blockquote class="about-club-world-cup">
+
+                <p>This is a new tournament that will be played for the first time in 2025 including 32 of the most successful club sides from each of the six international confederations: 
+                    AFC, CAF, Concacaf, CONMEBOL, OFC and UEFA. FIFA's new prime club competition - the FIFA Club World Cup 2025™ - will grace the world stage in June and July 2025.</p>
+            </blockquote>
+
+            <img src="https://cdn.prod.website-files.com/606f2fff33ee7e4d0e09852e/66f5d89d8ea1bb73e3d20f12_LumenFieldNight_1920x1080.jpg" alt="Picture of Lumen Field">
+        </article>
 
 
     </main>
