working on adding a cover photo to the header

--- a/menu.html
+++ b/menu.html
@@ -2,76 +2,81 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event center - Menu</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Event center - Menu</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="site-header">
-        <a href="index.html" class="site-logo">Event Center</a>
-        <nav class="navbar">
-            <ul>
-                <li class="nav-item"><a href="index.html">Home</a> </li>
-                <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="menu.html">Menu</a></li>
-                <li class="nav-item"><a href="location.html">Location</a></li>
-                <li class="nav-item"><a href="contact.html">Contact Us</a></li>
-            </ul>
 
-        </nav>
+  <div class="header-banner">
+    <header class="site-header">
+      <a href="index.html" class="site-logo">Event Center</a>
+      <nav class="navbar">
+        <ul>
+          <li class="nav-item"><a href="index.html">Home</a> </li>
+          <li class="nav-item"><a href="events.html">Events</a></li>
+          <li class="nav-item"><a href="menu.html">Menu</a></li>
+          <li class="nav-item"><a href="location.html">Location</a></li>
+          <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+        </ul>
+
+      </nav>
 
     </header>
-
-    <main class="site-main">
-        <h1 class="menu-table-header">Smash Burger Popular items</h1>
-        <p class="menu-table-paragraph">Lumen field has a lot of parterners when it comes to food and drinks but here's one option that I think you might like</p>
-        <table class="menu-table">
-  <thead>
-    <tr>
-      <th>Food</th>
-      <th>Type</th>
-      <th>Total Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Steak Bowl</td>
-      <td>Meat</td>
-      <td>$32.00</td>
-    </tr>
-    <tr>
-      <td>Crispy Veggie Bowl</td>
-      <td>Veggie lovers</td>
-      <td>$24.00</td>
-    </tr>
-    <tr>
-      <td>BBQ Pizza</td>
-      <td>Pizza</td>
-      <td>$25.00</td>
-    </tr>
-    <tr>
-      <td>Smash Burger</td>
-      <td>Burgers</td>
-      <td>$24.00</td>
-    </tr>
-    <tr>
-      <td>Cheeseburger & Fries</td>
-      <td>Kids Menu</td>
-      <td>$13.</td>
-    </tr>
-  </tbody>
-</table>
+  </div>
 
 
-    </main>
+  <main class="site-main">
+    <h1 class="menu-table-header">Smash Burger Popular items</h1>
+    <p class="menu-table-paragraph">Lumen field has a lot of parterners when it comes to food and drinks but here's
+      one option that I think you might like</p>
+    <table class="menu-table">
+      <thead>
+        <tr>
+          <th>Food</th>
+          <th>Type</th>
+          <th>Total Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Steak Bowl</td>
+          <td>Meat</td>
+          <td>$32.00</td>
+        </tr>
+        <tr>
+          <td>Crispy Veggie Bowl</td>
+          <td>Veggie lovers</td>
+          <td>$24.00</td>
+        </tr>
+        <tr>
+          <td>BBQ Pizza</td>
+          <td>Pizza</td>
+          <td>$25.00</td>
+        </tr>
+        <tr>
+          <td>Smash Burger</td>
+          <td>Burgers</td>
+          <td>$24.00</td>
+        </tr>
+        <tr>
+          <td>Cheeseburger & Fries</td>
+          <td>Kids Menu</td>
+          <td>$13.</td>
+        </tr>
+      </tbody>
+    </table>
 
-    <footer class="site-footer">
 
-        <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
+  </main>
 
-    </footer>
+  <footer class="site-footer">
+
+    <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
+
+  </footer>
 
 
 </body>
