Changed events page layout and did some styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="site-main">
         <section class="welcome">
             <h1> Fifa Club World Cup is coming to Seattle </h1>
-            <p> You will find some of Europe's best teams in Seattle this summer. Here are three of my favorite matches.</p>
+            <p> Europe's best of the best in the Pacific Northwest.</p>
         </section>
 
 
