Added paraghraphs to Events page and also new headers

--- a/events.html
+++ b/events.html
@@ -35,7 +35,8 @@
                         alt="Seattle Sounders vs Atletico Madrid">
                     <div class="events-details">
                     <h3>Seattle Sounders vs Atletico Madrid</h3>
-                    <p>June 19th at 3:00 PM</p>
+                    <h5>June 19th at 3:00 PM</h5>
+                    <p>Home team, Seattle Sounders will play Atletico Madrid from the Spanish capital - Madrid. A team that's rival to my favorite team in the world - Real Madrid playing against my home club - The Seattle Sounders. This one will be tough but I think The Sounders will win behind the fans, one of the loudest soccer fans in the nation.</p>
                     </div>
                 </article>
 
@@ -45,7 +46,8 @@
                         alt="Seattle Sounders vs PSG">
                     <div class="events-details">    
                     <h3>Seattle Sounders vs PSG</h3>
-                    <p>June 23rd at 12:00 PM</p>
+                    <h5>June 23rd at 12:00 PM</h5>
+                    <p>Raining Europian Champions and the last team I wanted to see winning the Europian Champions Leauge will be playing the home team, The Seattle Sounders. Again, I think this will also be an easy win for the home team.</p>
                     </div>
                 </article>
 
@@ -55,7 +57,8 @@
                         alt="Inter Milan vs River Plate">
                     <div class="events-details">    
                     <h3>Inter Milan vs River Plate</h3>
-                    <p>June 25th at 6:00 PM</p>
+                    <h5>June 25th at 6:00 PM</h5>
+                    <p>This one is going to be very interesting because Inter Milan are fresh off of a disappointing Champions Leauge final, where they were trashed by PSG. They will also be playing a South American team that is an underdog in this competition so I think Inter Milan will easy win this one</p>
                     </div>
                 </article>
 
