Added image gallery

--- a/events.html
+++ b/events.html
@@ -65,6 +65,13 @@
             </div>
         </section>
 
+        <h1 class="events-page-gallery-header"> Event Gallery</h1>
+        <div class="events-page-gallery">
+            <img src="media/LumenFieldInsideView.jpg" alt="Lumen Field Inside View">
+            <img src="media/FullSechedule.jpg" alt="Full Schedule">
+            <img src="media/lumenFieldSkyView.jpg" alt="Lumen Field Skyview">
+        </div>
+
     </main>
 
     <footer class="site-footer">
