Fixed styling issues

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <section class="events">
             <h2 class="events-header">Exciting Matches at Lumen Field</h2>
             <div class="events-flexbox">
-
+            
                 <article class="event">
-                    <img
-                        src="https://image.discovery.indazn.com/ca/v2/ca/image?id=9my71qof4tvvjjyon5jvdyth0_image-header_pUs_1740401481000&quality=50" alt="Seattle Sounders vs Atletico Madrid">
+                    <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=9my71qof4tvvjjyon5jvdyth0_image-header_pUs_1740401481000&quality=50"
+                        alt="Seattle Sounders vs Atletico Madrid">
                     <h3>Seattle Sounders vs Atletico Madrid</h3>
                     <p>June 19th at 3:00 PM</p>
                 </article>
@@ -62,14 +62,17 @@
 
         <article class="lumen-field-history">
             <h1>About The Club World Cup</h1>
-            
+
             <blockquote class="about-club-world-cup">
 
-                <p>This is a new tournament that will be played for the first time in 2025 including 32 of the most successful club sides from each of the six international confederations: 
-                    AFC, CAF, Concacaf, CONMEBOL, OFC and UEFA. FIFA's new prime club competition - the FIFA Club World Cup 2025™ - will grace the world stage in June and July 2025.</p>
+                <p>This is a new tournament that will be played for the first time in 2025 including 32 of the most
+                    successful club sides from each of the six international confederations:
+                    AFC, CAF, Concacaf, CONMEBOL, OFC and UEFA. FIFA's new prime club competition - the FIFA Club World
+                    Cup 2025™ - will grace the world stage in June and July 2025.</p>
             </blockquote>
 
-            <img src="https://cdn.prod.website-files.com/606f2fff33ee7e4d0e09852e/66f5d89d8ea1bb73e3d20f12_LumenFieldNight_1920x1080.jpg" alt="Picture of Lumen Field">
+            <img src="https://cdn.prod.website-files.com/606f2fff33ee7e4d0e09852e/66f5d89d8ea1bb73e3d20f12_LumenFieldNight_1920x1080.jpg"
+                alt="Picture of Lumen Field">
         </article>
 
 
