Made some style changes, lined articles to pages, and made some responsive additions on all content.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 <body>
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
+
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger">&#9776;</label>
+
         <nav class="navbar">
             <ul>
-                <li class="nav-item"><a href="index.html">Home</a> </li>
-                <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="menu.html">Menu</a></li>
-                <li class="nav-item"><a href="location.html">Location</a></li>
-                <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="location.html">Location</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
-
         </nav>
-
     </header>
 
     <main class="site-main">
@@ -35,26 +37,30 @@
         <section class="events">
             <h2 class="events-header">Exciting Matches at Lumen Field</h2>
             <div class="events-flexbox">
-            
                 <article class="event">
-                    <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=9my71qof4tvvjjyon5jvdyth0_image-header_pUs_1740401481000&quality=50"
-                        alt="Seattle Sounders vs Atletico Madrid">
-                    <h3>Seattle Sounders vs Atletico Madrid</h3>
-                    <p>June 19th at 3:00 PM</p>
-                </article>
+                    <a href="events.html#sounders-vs-madrid" class="event-link">
+                        <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=9my71qof4tvvjjyon5jvdyth0_image-header_pUs_1740401481000&quality=50"
+                            alt="Seattle Sounders vs Atletico Madrid">
+                        <h3>Seattle Sounders vs Atletico Madrid</h3>
+                        <p>June 19th at 3:00 PM</p>
+                    </a>
 
-                <article class="event">
-                    <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=7za2rp5rzi26zuc0uupmtpojn_image-header_pUs_1748594817000&quality=70"
-                        alt="Seattle Sounders vs PSG">
-                    <h3>Seattle Sounders vs PSG</h3>
-                    <p>June 23rd at 12:00 PM</p>
                 </article>
-
                 <article class="event">
-                    <img src="https://prosoccerwire.usatoday.com/gcdn/authoring/images/DataSkriveProSoccerWire/2025/06/09/SMLS/84122809007-4a390aZ.jpeg?width=660&height=372&fit=crop&format=pjpg&auto=webp"
-                        alt="Inter Milan vs River Plate">
-                    <h3>Inter Milan vs River Plate</h3>
-                    <p>June 25th at 6:00 PM</p>
+                    <a href="events.html#sounders-vs-psg" class="event-link">
+                        <img src="https://image.discovery.indazn.com/ca/v2/ca/image?id=7za2rp5rzi26zuc0uupmtpojn_image-header_pUs_1748594817000&quality=70"
+                            alt="Seattle Sounders vs PSG">
+                        <h3>Seattle Sounders vs PSG</h3>
+                        <p>June 23rd at 12:00 PM</p>
+                    </a>
+                </article>
+                <article class="event">
+                    <a href="events.html#milan-vs-river" class="event-link">
+                        <img src="https://prosoccerwire.usatoday.com/gcdn/authoring/images/DataSkriveProSoccerWire/2025/06/09/SMLS/84122809007-4a390aZ.jpeg?width=660&height=372&fit=crop&format=pjpg&auto=webp"
+                            alt="Inter Milan vs River Plate">
+                        <h3>Inter Milan vs River Plate</h3>
+                        <p>June 25th at 6:00 PM</p>
+                    </a>
                 </article>
 
             </div>
