--- a/menu.html
+++ b/menu.html
@@ -10,21 +10,22 @@
 
 <body>
 
-  <div class="header-banner">
-    <header class="site-header">
-      <a href="index.html" class="site-logo">Event Center</a>
-      <nav class="navbar">
-        <ul>
-          <li class="nav-item"><a href="index.html">Home</a> </li>
-          <li class="nav-item"><a href="events.html">Events</a></li>
-          <li class="nav-item"><a href="menu.html">Menu</a></li>
-          <li class="nav-item"><a href="location.html">Location</a></li>
-          <li class="nav-item"><a href="contact.html">Contact Us</a></li>
-        </ul>
+  <header class="site-header">
+    <a href="index.html" class="site-logo">Event Center</a>
 
-      </nav>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="hamburger">&#9776;</label>
 
-    </header>
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="location.html">Location</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
   </div>
 
 
