--- a/contact.html
+++ b/contact.html
@@ -11,17 +11,19 @@
 <body>
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
+
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger">&#9776;</label>
+
         <nav class="navbar">
             <ul>
-                <li class="nav-item"><a href="index.html">Home</a> </li>
-                <li class="nav-item"><a href="events.html">Events</a></li>
-                <li class="nav-item"><a href="menu.html">Menu</a></li>
-                <li class="nav-item"><a href="location.html">Location</a></li>
-                <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="location.html">Location</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
-
         </nav>
-
     </header>
 
     <main>
@@ -30,27 +32,29 @@
                 <h1 class="about-us-header">Contact Us</h1>
                 <form action="submit" method="post">
 
-                            <div class="form-name-email">
-                                <label for="name">Name:</label><br><br>
-                                <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
+                    <div class="form-name-email">
+                        <label for="name">Name:</label><br><br>
+                        <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
 
-                                <label for="email">Email:</label><br><br>
-                                <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
-                            </div>
+                        <label for="email">Email:</label><br><br>
+                        <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
+                    </div>
 
-                            <div>
-                                <p class="contact-form-paragraph">How did you hear about us?</p>
-                                <form>
-                                    <label>Google<input type="checkbox" name="Google" value="Google"></label>
-                                    <label>Samir Developer<input type="checkbox" name="Samir Developer" value="Samir Developer"></label>
-                                    <label>Coding Temple<input type="checkbox" name="Coding Temple" value="Coding Temple"></label>
-                                </form> 
-                            </div> <br>
+                    <div>
+                        <p class="contact-form-paragraph">How did you hear about us?</p>
+                        <form>
+                            <label>Google<input type="checkbox" name="Google" value="Google"></label>
+                            <label>Samir Developer<input type="checkbox" name="Samir Developer"
+                                    value="Samir Developer"></label>
+                            <label>Coding Temple<input type="checkbox" name="Coding Temple"
+                                    value="Coding Temple"></label>
+                        </form>
+                    </div> <br>
 
 
-                            <label class="contact-form-message" for="message">Anything you want us to know?</label><br><br>
-                            <textarea id="message" name="message" rows="8"></textarea><br><br>
-                            <button type="submit">Send Message</button><br>
+                    <label class="contact-form-message" for="message">Anything you want us to know?</label><br><br>
+                    <textarea id="message" name="message" rows="8"></textarea><br><br>
+                    <button type="submit">Send Message</button><br>
 
 
 
