Tweaked styling and grammatical errors

--- a/events.html
+++ b/events.html
@@ -39,7 +39,7 @@
                     <h3>Seattle Sounders vs Atletico Madrid</h3>
                     <h5>June 19th at 3:00 PM</h5>
                     <p>Home team, Seattle Sounders will play Atletico Madrid from the Spanish capital - Madrid. A team
-                        that's rival to my favorite team in the world - Real Madrid playing against my home club - The
+                        that's rival to my favorite team in the world - Real Madrid, playing against my home club - The
                         Seattle Sounders. This one will be tough but I think The Sounders will win behind the fans, one
                         of the loudest soccer fans in the nation.</p>
                 </div>
@@ -67,8 +67,7 @@
                     <h5>June 25th at 6:00 PM</h5>
                     <p>This one is going to be very interesting because Inter Milan are fresh off of a disappointing
                         Champions Leauge final, where they were trashed by PSG. They will also be playing a South
-                        American team that is an underdog in this competition so I think Inter Milan will easy win this
-                        one</p>
+                        American team that is an underdog in this competition. I expect Inter Milan to cruise to an easy win. </p>
                 </div>
             </article>
         </section>
