Fixed styling issues

--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,12 @@
                     <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
                 </div>
 
-                <p class="contact-form-paragraph">How did you hear about us?</p>
-                <label><input type="checkbox" name="referral" value="Google"> Google</label>
-                <label><input type="checkbox" name="referral" value="Samir Developer"> Samir Developer</label>
-                <label><input type="checkbox" name="referral" value="Coding Temple"> Coding Temple</label><br><br>
+                <p class="contact-form-paragraph">How did you hear about us?</p><b></b>
+                <div class="checkbox-group">
+                    <label>Google<input type="checkbox" name="referral" value="Google"></label>
+                    <label>Samiir Developer<input type="checkbox" name="referral" value="Samir Developer"></label>
+                    <label>Coding Temple<input type="checkbox" name="referral" value="Coding Temple"></label>
+                </div>
 
                 <label class="contact-form-message" for="message">Anything you want us to know?</label><br><br>
                 <textarea id="message" name="message" rows="8"></textarea><br><br>
