Added comments, media and styling

--- a/events.html
+++ b/events.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <!-- Header - Site logo (Event Center), menu-toggle, and navigation bar -->
+
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
 
@@ -27,6 +30,8 @@
     </header>
 
     <main>
+
+        <!-- Three events at the Club world cup -->
         <section class="events-page">
             <h1>Exciting Matches at Lumen Field</h1>
 
@@ -73,6 +78,8 @@
         </section>
 
     </main>
+
+    <!-- Site footer -->
 
     <footer class="site-footer">
 
