--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <!-- Header - Site logo (Event Center), menu-toggle, and navigation bar -->
+
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
 
@@ -33,7 +36,8 @@
         </section>
 
 
-        <!--Events Flexbox approach-->
+        <!--Events highlights, also linked to articles on events page. Flexbox approach-->
+
         <section class="events">
             <h2 class="events-header">Exciting Matches at Lumen Field</h2>
             <div class="events-flexbox">
@@ -83,6 +87,8 @@
 
 
     </main>
+
+     <!-- Site footer -->
 
     <footer class="site-footer">
 
