--- a/location.html
+++ b/location.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <!-- Header - Site logo (Event Center), menu-toggle, and navigation bar -->
+
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
 
@@ -27,6 +30,8 @@
     </header>
 
     <main>
+
+         <!-- Location map of Lumen field linked from Google -->
 
         <div class="location-wrapper">
             <div class="location">
@@ -57,6 +62,8 @@
 
 
     </main>
+
+     <!-- Site footer -->
 
     <footer class="site-footer">
 
