--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,8 @@
 
 <body>
 
+  <!-- Header - Site logo (Event Center), menu-toggle, and navigation bar -->
+
   <header class="site-header">
     <a href="index.html" class="site-logo">Event Center</a>
 
@@ -28,7 +30,7 @@
   </header>
   </div>
 
-
+   <!-- A table of Chose menu from Smash burger -->
   <main class="site-main">
     <h1 class="menu-table-header">Smash Burger Popular items</h1>
     <p class="menu-table-paragraph">Lumen field has a lot of parterners when it comes to food and drinks but here's
@@ -72,6 +74,8 @@
 
 
   </main>
+
+   <!-- Site footer -->
 
   <footer class="site-footer">
 
