--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+    <!-- Header - Site logo (Event Center), menu-toggle, and navigation bar -->
     <header class="site-header">
         <a href="index.html" class="site-logo">Event Center</a>
 
@@ -27,16 +29,18 @@
     </header>
 
     <main>
+
+        <!-- Contact form -->
         <section class="contact-form">
             <h1 class="about-us-header">Contact Us</h1>
 
             <form name="contact" method="POST" data-netlify="true">
                 <div class="form-name-email">
                     <label for="name">Name:</label><br><br>
-                    <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
 
                     <label for="email">Email:</label><br><br>
-                    <input type="email" id="email" name="email" placeholder="Enter your email"><br><br>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
                 </div>
 
                 <p class="contact-form-paragraph">How did you hear about us?</p><b></b>
@@ -55,7 +59,7 @@
 
 
     </main>
-
+    <!-- Site footer -->
     <footer class="site-footer">
 
         <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
