Fixed naming changes

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <p class="contact-form-paragraph">How did you hear about us?</p><b></b>
                 <div class="checkbox-group">
                     <label>Google<input type="checkbox" name="referral" value="Google"></label>
-                    <label>Samiir Developer<input type="checkbox" name="referral" value="Samir Developer"></label>
+                    <label>Samir Developer<input type="checkbox" name="referral" value="Samir Developer"></label>
                     <label>Coding Temple<input type="checkbox" name="referral" value="Coding Temple"></label>
                 </div>
 
@@ -62,7 +62,7 @@
     <!-- Site footer -->
     <footer class="site-footer">
 
-        <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
+        <p>&copy; 2025 Samir Developer. All rights reserved.</p>
 
     </footer>
 
