--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <footer class="site-footer">
 
-        <p>&copy; 2025 Samiir Developer. All rights reserved.</p>
+        <p>&copy; 2025 Samir Developer. All rights reserved.</p>
 
     </footer>
 
